a tentar corrigir um erro obtive outro
O ficheiro a correr é o mapreduce.py:
python3 mapreduce.py file:///home/usermr/examples/input/facedetect/faces.mp4 -o file:///home/usermr/examples/output/facedetect

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 
 .DS_Store
+examples/.DS_Store
+examples/.DS_Store
+AmbienteUC/.DS_Store
+.DS_Store
+examples/.DS_Store
+examples/.DS_Store
+examples/input/.DS_Store
+examples/output/.DS_Store
